feat(article): создает сетку десктопа и дополняет контент

--- a/src/components/blocks/news-article/article.pug
+++ b/src/components/blocks/news-article/article.pug
@@ -40,28 +40,35 @@ mixin article()
                 span Заключение
 
         .article__content
-          .title.title--special-medium.article__title
-            h2 С&nbsp;другой стороны начало повседневной работы
+          .article__context-section
 
-          .text.article__text
-            p
-              | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
-              | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
-              | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
+            .title.title--special-medium.article__title
+              h2 С&nbsp;другой стороны начало повседневной работы
 
+            .text.article__text
+              p
+                | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
+                | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
+                | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
 
-          .text.article__text
-            p
-              | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
-              | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
-              | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
+            .article__video
+              img(src="/images/blogger.png", width='774', height='410', alt='Контентная картинка статьи.')
 
-          .title.title--special-medium.article__title
-            h2 Начало повседневной работы
+            .text.article__text
+              p
+                | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
+                | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
+                | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
 
-          .text.article__text
-            p
-              | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
-              | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
-              | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
+          .article__context-section
+            .title.title--special-medium.article__title
+              h2 Начало повседневной работы
 
+            .text.article__text
+              p
+                | С&nbsp;другой стороны начало повседневной работы по&nbsp;формированию позиции требуют от&nbsp;нас анализа существенных финансовых и&nbsp;административных условий.
+                | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
+                | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
+
+            .article__image
+              img(src="/images/blogger.png", width='774', height='410', alt='Контентная картинка статьи.')
