feat(news-article): добавляет блок просмотренное

--- a/src/pages/news-article.pug
+++ b/src/pages/news-article.pug
@@ -10,3 +10,4 @@ block pageContent
   +breadcrumbs(nameIitemsBreadcrumbs).breadcrumbs--item-white.news-article__breadcrumbs
   +article-banner().news-article__article-banner
   +article().news-article__article
+  +viewed().news-article__viewed
