--- a/src/scss/pages/news-article.scss
+++ b/src/scss/pages/news-article.scss
@@ -32,4 +32,12 @@
       margin-bottom: 100px;
     }
   }
+
+  &__viewed {
+    margin-bottom: 110px;
+
+    @include vp-tablet {
+      margin-bottom: 120px;
+    }
+  }
 }
