feat(about-company):  создаёт страницу с блоком о компании

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -26,6 +26,8 @@ include ./blocks/news/news-block
 include ./blocks/news-article/article
 include ./blocks/news-article/article-banner
 
+include ./blocks/about-company/article-company
+
 //- UI
 include ./ui/icon
 include ./ui/img
