--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,9 +52,12 @@
 @import 'blocks/news-article/article.scss';
 @import 'blocks/news-article/article-banner.scss';
 
+@import 'blocks/about-company/article-company.scss';
+
 // PAGES
 @import 'pages/page-home.scss';
 @import 'pages/catalog.scss';
 @import 'pages/product.scss';
 @import 'pages/news.scss';
 @import 'pages/news-article.scss';
+@import 'pages/about-company.scss';
