--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -8,6 +8,7 @@ include ./blocks/common/certificates
 include ./blocks/common/cooperation
 include ./blocks/common/viewed
 include ./blocks/common/breadcrumbs
+include ./blocks/common/company-image
 
 //- page-name..
 include ./blocks/index/intro
