--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@
 @import 'blocks/common/cooperation.scss';
 @import 'blocks/common/viewed.scss';
 @import 'blocks/common/breadcrumbs.scss';
+@import 'blocks/common/company-image.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
