feat(article-company): добавляет в блок компонент картинка-компании

--- a/src/components/blocks/about-company/article-company.pug
+++ b/src/components/blocks/about-company/article-company.pug
@@ -37,3 +37,5 @@ mixin article-company()
               each option in textActivities
                 li.article-company__item-activities
                   p!= option.activities
+
+        +company-image().article-company__bg-wrapper
