--- a/src/scss/blocks/about-company/article-company.scss
+++ b/src/scss/blocks/about-company/article-company.scss
@@ -69,4 +69,10 @@
       margin-bottom: 10px;
     }
   }
+
+  &__bg-wrapper {
+    @include vp-tablet-landscape {
+      grid-column: 1 / -1;
+    }
+  }
 }
