feat(about-company): добавляет готовые блок компоненты

--- a/src/pages/about-company.pug
+++ b/src/pages/about-company.pug
@@ -8,3 +8,8 @@ block pageContent
 
   +breadcrumbs(nameIitemsBreadcrumbs).about-company__breadcrumbs
   +article-company().about-company__article-company
+  +manufacturers().about-company__manufacturers
+
+  +confidence().about-company__confidence
+  +cooperation().about-company__cooperation
+  +viewed().about-company__viewed
