--- a/src/scss/pages/about-company.scss
+++ b/src/scss/pages/about-company.scss
@@ -23,4 +23,29 @@
       margin-bottom: 100px;
     }
   }
+
+  &__manufacturers {
+    margin-bottom: 40px;
+
+    @include vp-tablet {
+      margin-bottom: 50px;
+    }
+  }
+
+  &__confidence,
+  &__cooperation {
+    margin-bottom: 90px;
+
+    @include vp-tablet {
+      margin-bottom: 100px;
+    }
+  }
+
+  &__viewed {
+    margin-bottom: 110px;
+
+    @include vp-tablet {
+      margin-bottom: 120px;
+    }
+  }
 }
