feat(gratitude): создает блок и добавляет на страницу компании

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -28,6 +28,7 @@ include ./blocks/news-article/article
 include ./blocks/news-article/article-banner
 
 include ./blocks/about-company/article-company
+include ./blocks/about-company/gratitude
 
 //- UI
 include ./ui/icon
