--- a/src/pages/about-company.pug
+++ b/src/pages/about-company.pug
@@ -11,5 +11,6 @@ block pageContent
   +manufacturers().about-company__manufacturers
 
   +confidence().about-company__confidence
+  +gratitude().about-company__gratitude
   +cooperation().about-company__cooperation
   +viewed().about-company__viewed
