--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -54,6 +54,7 @@
 @import 'blocks/news-article/article-banner.scss';
 
 @import 'blocks/about-company/article-company.scss';
+@import 'blocks/about-company/gratitude.scss';
 
 // PAGES
 @import 'pages/page-home.scss';
