feat: создает обертки блока и компонента видео и добавляет на страницы

--- a/src/components/blocks/news-article/article.pug
+++ b/src/components/blocks/news-article/article.pug
@@ -51,8 +51,7 @@ mixin article()
                 | С&nbsp;другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от&nbsp;нас анализа позиций, занимаемых участниками в&nbsp;отношении поставленных задач.
                 | С&nbsp;другой стороны консультация с&nbsp;широким активом позволяет выполнять важные задания по&nbsp;разработке новых предложений.
 
-            .article__video
-              img(src="/images/blogger.png", width='774', height='410', alt='Контентная картинка статьи.')
+            +video().article__video
 
             .text.article__text
               p
