--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -9,6 +9,8 @@ include ./blocks/common/cooperation
 include ./blocks/common/viewed
 include ./blocks/common/breadcrumbs
 include ./blocks/common/company-image
+include ./blocks/common/video
+include ./blocks/common/video-vlog
 
 //- page-name..
 include ./blocks/index/intro
