--- a/src/pages/about-company.pug
+++ b/src/pages/about-company.pug
@@ -9,7 +9,7 @@ block pageContent
   +breadcrumbs(nameIitemsBreadcrumbs).about-company__breadcrumbs
   +article-company().about-company__article-company
   +manufacturers().about-company__manufacturers
-
+  +video-vlog().about-company__video-vlog
   +confidence().about-company__confidence
   +gratitude().about-company__gratitude
   +cooperation().about-company__cooperation
