--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,7 +6,7 @@ block pageContent
   +advantages().page-home__advantages
   +popular().page-home__popular
   +manufacturers().page-home__manufacturers
-
+  +video-vlog().page-home__video-vlog
   +certificates().page-home__certificates
   +cooperation().page-home__cooperation
   +company().page-home__company
