--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,8 @@
 @import 'blocks/common/viewed.scss';
 @import 'blocks/common/breadcrumbs.scss';
 @import 'blocks/common/company-image.scss';
+@import 'blocks/common/video.scss';
+@import 'blocks/common/video-vlog.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
