feat(manufacturers-page): создает и подключает страницу

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,3 +65,4 @@
 @import 'pages/news.scss';
 @import 'pages/news-article.scss';
 @import 'pages/about-company.scss';
+@import 'pages/manufacturers-page.scss';
