feat(manufacturers-page): подключает к странице контентные блоки

--- a/src/pages/manufacturers-page.pug
+++ b/src/pages/manufacturers-page.pug
@@ -7,3 +7,7 @@ block pageContent
     ];
 
   +breadcrumbs(nameIitemsBreadcrumbs).manufacturers-page__breadcrumbs
+  +manufacturers().manufacturers-page__manufacturers
+  +video-vlog().manufacturers-page__video-vlog
+  +certificates().manufacturers-page__certificates
+  +viewed().manufacturers-page__viewed
