--- a/src/scss/pages/manufacturers-page.scss
+++ b/src/scss/pages/manufacturers-page.scss
@@ -1,12 +1,30 @@
 .manufacturers-page {
-  //display: flex;
-  //flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-  &__breadcrumbs {
+  &__breadcrumbs,
+  &__manufacturers {
     margin-bottom: 40px;
 
     @include vp-tablet {
       margin-bottom: 50px;
+    }
+  }
+
+  &__video-vlog,
+  &____certificates {
+    margin-bottom: 90px;
+
+    @include vp-tablet {
+      margin-bottom: 100px;
+    }
+  }
+
+  &__viewed {
+    margin-bottom: 110px;
+
+    @include vp-tablet {
+      margin-bottom: 120px;
     }
   }
 }
