Advantages icon fix

--- a/src/scss/blocks/index/advantages.scss
+++ b/src/scss/blocks/index/advantages.scss
@@ -52,5 +52,10 @@
   &__card-icon {
     color: $primary;
     margin-bottom: 7px;
+
+    img {
+      width: 65px;
+      height: 65px;
+    }
   }
 }
