--- a/src/scss/blocks/common/cooperation.scss
+++ b/src/scss/blocks/common/cooperation.scss
@@ -87,6 +87,11 @@
     border-radius: 50%;
     margin: 0 auto;
     margin-bottom: 33px;
+
+    img {
+      width: 56px;
+      heihgt: 56px;
+    }
   }
 
 
