--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -1,11 +1,23 @@
 extends /layouts/main.pug
 
-block pageContent
-  -
-    const nameIitemsBreadcrumbs = [
-      "Каталог",
-    ];
+block variables
+  - const title = "Catalog" //- на страницах кроме главной используйте О нас — ProjectName
+  - const wrapperMods = ""
+  - const hasHeader = true
+  - const headerMods = ""
+  - const hasFooter = true
+  - const footerMods = ""
+  - const currentUrl = "catalog.html" //- для остальных страниц пишем пустую строку или индекс активного headerLinks
 
-  +breadcrumbs(nameIitemsBreadcrumbs).catalog__breadcrumbs
-  +catalog-block().catalog__catalog-block
-  +viewed().catalog__viewed
+//-block pageContent
+
+block main
+  main.catalog
+    -
+      const nameIitemsBreadcrumbs = [
+        "Каталог",
+      ];
+
+    +breadcrumbs(nameIitemsBreadcrumbs).catalog__breadcrumbs
+    +catalog-block().catalog__catalog-block
+    +viewed().catalog__viewed
