--- a/src/pages/news.pug
+++ b/src/pages/news.pug
@@ -1,11 +1,24 @@
 extends /layouts/main.pug
 
-block pageContent
-  -
-    const nameIitemsBreadcrumbs = [
-      "Новости",
-    ];
+block variables
+  - const title = "News" //- на страницах кроме главной используйте О нас — ProjectName
+  - const wrapperMods = ""
+  - const hasHeader = true
+  - const headerMods = ""
+  - const hasFooter = true
+  - const footerMods = ""
+  - const currentUrl = "news.html" //- для остальных страниц пишем пустую строку или индекс активного headerLinks
 
-  +breadcrumbs(nameIitemsBreadcrumbs).news__breadcrumbs
-  +news-block().news__news-block
-  +viewed().news__viewed
+
+//- block pageContent
+
+block main
+  main.news
+    -
+      const nameIitemsBreadcrumbs = [
+        "Новости",
+      ];
+
+    +breadcrumbs(nameIitemsBreadcrumbs).news__breadcrumbs
+    +news-block().news__news-block
+    +viewed().news__viewed
