feat(footer): создает блок разметку и компонент навигации

--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -1,6 +1,7 @@
 // colors
 $primary: #623061;
 $primary-hover: #743573;
+$logo-text: #6D658D;
 $secondary: #909090;
 $accent: cyan; // example
 $bg-intro: #055b5c;
