--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,2 +1,27 @@
 .footer {
+  max-width: 100vw;
+  color: $base;
+
+  &__item-brand {
+    display: flex;
+    gap: 18px;
+    align-items: center;
+  }
+
+  &__logo {
+    width: 66px;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  &__item-brand-descriptor {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 120%;
+    color: $logo-text;
+    padding-top: 15px;
+    max-width: 147px;
+  }
 }
