--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 @import 'ui/custom-toggle.scss';
 @import 'ui/slider-card.scss';
 @import 'ui/pagination.scss';
+@import 'ui/navigation.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
