--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,10 +1,28 @@
 .footer {
   max-width: 100vw;
+  position: relative;
   color: $base;
+  background-color: $accent-bg;
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 28px;
+
+    background-image: url("/images/edge-bg.svg");
+    background-size: cover;
+    background-repeat: repeat;
+    background-position: center;
+    top: -14px;
+    left: 0;
+  }
 
   &__inner {
     display: flex;
     flex-direction: column;
+    padding-top: 46px;
 
     @include vp-tablet-landscape {
       display: grid;
@@ -16,7 +34,15 @@
   &__item-brand {
     display: flex;
     gap: 18px;
-    align-items: center;
+    margin-bottom: 50px;
+
+    @include vp-tablet {
+      margin-bottom: 46px;
+    }
+
+    @include vp-tablet-landscape {
+      margin-bottom: auto;
+    }
   }
 
   &__logo {
@@ -34,23 +60,47 @@
     color: $logo-text;
     padding-top: 15px;
     max-width: 147px;
+    align-self: center;
   }
 
   &__container {
+    line-height: 130%;
     display: grid;
     grid-template-columns: 47.35% auto;
     grid-template-rows: auto auto auto;
+    row-gap: 30px;
+
+    border-top: 1px solid $border-fill;
+
+    padding-top: 50px;
+    margin-bottom: 50px;
 
     @include vp-tablet {
       grid-template-columns: 18.33% 31.06% auto;
       grid-template-rows: auto auto;
       column-gap: 10.6%;
       row-gap: 20px;
+
+      padding-top: 56px;
+      margin-bottom: 56px;
     }
 
     @include vp-tablet-landscape {
-      grid-template-columns: auto auto auto auto;
+      border: none;
+
+      padding-top: 0;
+      margin-bottom: 56px;
+    }
+
+    @include vp-desktop {
+      grid-template-columns: 121px 205px 187px auto;
       grid-template-rows: auto;
+      column-gap: 70px;
+    }
+
+    h3 {
+      margin-top: 0;
+      margin-bottom: 12px;
     }
   }
 
@@ -67,6 +117,30 @@
     }
   }
 
+  &__item-mode {
+    @include vp-tablet-landscape {
+      width: 98%;
+    }
+
+    @include vp-desktop {
+      width: 100%;
+    }
+  }
+
+  &__item-address {
+    @include vp-tablet {
+      width: 96%;
+    }
+
+    @include vp-tablet-landscape {
+      width: 94%;
+    }
+
+    @include vp-desktop {
+      width: 100%;
+    }
+  }
+
   &__item-list,
   &__contacts,
   &__bottom-bar-nav {
@@ -76,6 +150,13 @@
   }
 
   &__bottom-bar {
+    border-top: 1px solid $border-fill;
+    padding: 36px 0;
+
+    @include vp-tablet {
+      padding: 26px 0;
+    }
+
     @include vp-tablet-landscape {
       grid-column: 1 / -1;
       grid-row: -1 / -2;
@@ -85,8 +166,37 @@
   &__bottom-bar-nav {
     display: flex;
     flex-direction: column;
+
     @include vp-tablet {
       flex-direction: row;
+      flex-wrap: wrap;
+    }
+
+    li {
+      &:not(:last-child) {
+        margin-bottom: 10px;
+
+        @include vp-tablet {
+          margin-bottom: 0;
+          margin-right: 26px;
+        }
+      }
+    }
+  }
+
+  &__bottom-bar-link {
+    line-height: 15px;
+    color: $secondary;
+  }
+
+  &__nav,
+  &__item-list,
+  &__contacts {
+    li {
+      &:not(:last-child) {
+        margin-bottom: 10px;
+      }
+
     }
   }
 }
