feat(header): подключает блок и создает логотип со стилями

--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -1,7 +1,8 @@
 // colors
 $primary: #623061;
 $primary-hover: #743573;
-$logo-text: #6D658D;
+$logo-text-header: #5e5a67;
+$logo-text: #6d658d;
 $secondary: #909090;
 $accent: cyan; // example
 $bg-intro: #055b5c;
