--- a/src/components/layout/header.pug
+++ b/src/components/layout/header.pug
@@ -1,56 +1,62 @@
 mixin header(headerMods, currentUrl)
 
   header.header(class=headerMods)
+    //-include /components/blocks/header-bar.pug
     .wrapper
-      | Header
-//- header.header
-//-   include /components/blocks/header-bar.pug
+      .header__inner
 
-//-   .wrapper
-//-     .header__inner
-//-       -var logoClassName = 'header__logo'
-//-       include /components/ui/logo.pug
+        .header__brand
 
-//-       div.header__middle
-//-         a.header__catalog.button(href="/shop/")
-//-           svg
-//-             use(href="/images/sprite.svg#catalog-wide")
-//-           span Каталог
-//-         -var serachFormClassName = 'header__search-form'
-//-         include /components/ui/search-form.pug
+          if(currentUrl === "index.html")
+            span.header__logo
+              +img("logo", "png", 64, 90, "Лолготип.")
+          else
+            +link({href: "index.html", ariaLabel: "Переход на главную страницу"}).header__logo
+              +img("logo", "png", 64, 90, "Лолготип.")
 
-//-       div.header__buttons
-//-         .header__contacts
-//-           span.header__contacts-trigger +7 (492)
-//-             svg
-//-               use(href="/images/sprite.svg#triangle")
-//-           .header__contacts-tooltip
-//-             .header__contacts-tooltip-item
-//-               .header__contacts-tooltip-title Контактный телефон
-//-               a(href="tel:+79999999999") +7 999 999 99 99
-//-               a(href="tel:+79999999999") +7 999 999 99 99
-//-               a(href="tel:+79999999999") +7 999 999 99 99
-//-             .header__contacts-tooltip-item
-//-               .header__contacts-tooltip-title Почта
-//-               a(href="mailto:avd-instrument@bk.ru") avd-instrument@bk.ru
-//-             .header__contacts-tooltip-item
-//-               .header__contacts-tooltip-title Написать в соц. сетях
-//-               - var socialsClass = 'header__contacts-socials socials--dark'
-//-               include /components/ui/socials.pug
+          span.header__brand-descriptor Поставщик сладких подарочных наборов и игрушек
 
-//-         button.header__callback-button.button(type="button") Заказать звонок
-//-         button.header__search-button(type="button")
-//-           svg
-//-             use(href="/images/sprite.svg#search")
-//-         button.header__cart-button.header__cart-button--has(type="button")
-//-           span.header__cart-icon
-//-             svg
-//-               use(href="/images/sprite.svg#cart")
-//-           span.header__cart-value 1
-//-         button.header__burger-button(type="button")
-//-           span
-//-           span
-//-           span
 
-//-   - var mobileMenuClassName = 'header__menu'
-//-   include /components/blocks/mobile-menu.pug
+      //-div.header__middle
+          a.header__catalog.button(href="/shop/")
+            svg
+              use(href="/images/sprite.svg#catalog-wide")
+            span Каталог
+          -var serachFormClassName = 'header__search-form'
+          include /components/ui/search-form.pug
+
+        div.header__buttons
+          .header__contacts
+            span.header__contacts-trigger +7 (492)
+              svg
+                use(href="/images/sprite.svg#triangle")
+            .header__contacts-tooltip
+              .header__contacts-tooltip-item
+                .header__contacts-tooltip-title Контактный телефон
+                a(href="tel:+79999999999") +7 999 999 99 99
+                a(href="tel:+79999999999") +7 999 999 99 99
+                a(href="tel:+79999999999") +7 999 999 99 99
+              .header__contacts-tooltip-item
+                .header__contacts-tooltip-title Почта
+                a(href="mailto:avd-instrument@bk.ru") avd-instrument@bk.ru
+              .header__contacts-tooltip-item
+                .header__contacts-tooltip-title Написать в соц. сетях
+                - var socialsClass = 'header__contacts-socials socials--dark'
+                include /components/ui/socials.pug
+
+          button.header__callback-button.button(type="button") Заказать звонок
+          button.header__search-button(type="button")
+            svg
+              use(href="/images/sprite.svg#search")
+          button.header__cart-button.header__cart-button--has(type="button")
+            span.header__cart-icon
+              svg
+                use(href="/images/sprite.svg#cart")
+            span.header__cart-value 1
+          button.header__burger-button(type="button")
+            span
+            span
+            span
+
+  //-- var mobileMenuClassName = 'header__menu'
+    include /components/blocks/mobile-menu.pug
