--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,4 +1,58 @@
 .header {
   max-width: 100vw;
   color: $base;
+
+  &__brand {
+    display: flex;
+    gap: 9px;
+    //margin-bottom: 50px;
+
+    @include vp-tablet {
+      gap: 16px;
+      //margin-bottom: 46px;
+    }
+
+    @include vp-tablet-landscape {
+      //margin-bottom: auto;
+    }
+  }
+
+  &__logo {
+    width: 53px;
+
+    @include vp-tablet {
+      width: 60px;
+    }
+
+    @include vp-tablet-landscape {
+      width: 64px;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  &__brand-descriptor {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
+
+    color: $logo-text-header;
+    padding-top: 8px;
+    max-width: 120px;
+    align-self: center;
+
+    @include vp-tablet {
+      padding-top: 5px;
+      font-size: 14px;
+      max-width: 140px;
+    }
+
+    @include vp-tablet-landscape {
+      padding-top: 15px;
+    }
+  }
+
 }
