feat(header-bar): создает компонент для шапки

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -16,6 +16,7 @@ include ./blocks/common/breadcrumbs
 include ./blocks/common/company-image
 include ./blocks/common/video
 include ./blocks/common/video-vlog
+include ./blocks/common/header-bar
 
 //- page-name..
 include ./blocks/index/intro
