--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,6 +38,7 @@
 @import 'blocks/common/company-image.scss';
 @import 'blocks/common/video.scss';
 @import 'blocks/common/video-vlog.scss';
+@import 'blocks/common/header-bar.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
