--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -2,6 +2,7 @@
 $primary: #623061;
 $primary-hover: #743573;
 $logo-text-header: #5e5a67;
+$special-color-header:#333333;
 $logo-text: #6d658d;
 $secondary: #909090;
 $accent: cyan; // example
